--- a/spring/shoppingSpring/src/main/resources/application.properties
+++ b/spring/shoppingSpring/src/main/resources/application.properties
@@ -1,5 +1,7 @@
-spring.datasource.url=jdbc:tcp:h2:~/shopping
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/shopping?characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.username=root
 spring.datasource.password=1234
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+mybatis.type-aliases-package=com.gowoo.shopping
+mybatis.mapper-locations:classpath:mapper/*.xml
