--- a/spring/shoppingSpring/src/main/resources/application.properties
+++ b/spring/shoppingSpring/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.datasource.password=1234
 
 mybatis.type-aliases-package=com.gowoo.shopping
 mybatis.mapper-locations:classpath:mapper/*.xml
+
+
+jwt.secret:youcantrevealthesecretkey1234012300040
+	
