--- a/react/shopping_react/package.json
+++ b/react/shopping_react/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "react": "^18.2.0",
+    "react-cookie": "^5.0.0",
+    "react-cookies": "^0.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "^2.1.3",
@@ -37,6 +39,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy":"http://localhost:8080"
-
+  "proxy": "http://localhost:8080"
 }
